RESOLVED FIXED225463
[WebAudio][GStreamer] socketpair leaks
https://bugs.webkit.org/show_bug.cgi?id=225463
Summary [WebAudio][GStreamer] socketpair leaks
Philippe Normand
Reported 2021-05-06 09:46:51 PDT
.
Attachments
Patch (2.73 KB, patch)
2021-05-06 09:53 PDT, Philippe Normand
no flags
Patch (2.73 KB, patch)
2021-05-06 10:01 PDT, Philippe Normand
no flags
Philippe Normand
Comment 1 2021-05-06 09:53:33 PDT
Philippe Normand
Comment 2 2021-05-06 10:01:05 PDT
Philippe Normand
Comment 3 2021-05-06 10:14:11 PDT
Radar WebKit Bug Importer
Comment 4 2021-05-06 10:15:29 PDT
Note You need to log in before you can comment on or make changes to this bug.