[WebAudio][GStreamer] socketpair leaks https://bugs.webkit.org/show_bug.cgi?id=225463

Reviewed by Žan Doberšek.

* platform/audio/gstreamer/AudioSourceProviderGStreamer.cpp:
(WebCore::AudioSourceProviderGStreamer::~AudioSourceProviderGStreamer): Properly dispose of
the GStreamer pipeline and the resources it has hold on.
* platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
(webKitWebAudioSrcChangeState): The ref returned by gst_buffer_pool_new() is transfer-full,
so we need to adopt it here.

Canonical link: https://commits.webkit.org/237402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277100 268f45cc-cd09-0410-ab3c-d52691b4dbfc